Feature/test export report (#21)
* Test : add tests for report

* Test : add tests for report

* fixup! Test : add tests for report

* fixup! fixup! Test : add tests for report

---------

Co-authored-by: sahraoui.lahcen1 <sahraoui.lahcen1@gmail.com>